Clean css installer and update jquery installer

--- a/install/index.html
+++ b/install/index.html
@@ -6,11 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="shortcut icon" href="images/favicon.png" />
-		<link rel="stylesheet" href="css/main2.css" />
 		<link rel="stylesheet" href="css/main.css" />
 
-		<script src="//cdnjs.cloudflare.com/ajax/libs/Kraken/3.8.2/js/html5.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/Kraken/3.8.2/js/html5.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
 
 		<script src="js/lang.js"></script>
