Add Vanilla expansion in admin panel and installer

--- a/install/index.html
+++ b/install/index.html
@@ -557,6 +557,7 @@
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="3">Cataclysm</option>
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="2">Wrath of the Lich King</option>
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="1">The Burning Crusade</option>
+																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="0">Vanilla</option>
 																		</select>
 																	</div>
 																</div>
