Add filter Apache module checker in installer

--- a/install/index.html
+++ b/install/index.html
@@ -234,6 +234,7 @@
 													<span class="bg-muted-200 dark:bg-muted-700 text-muted-500 dark:text-muted-200 h-7 w-auto items-center justify-center rounded-full text-xs p-1">mod_headers</span>,
 													<span class="bg-muted-200 dark:bg-muted-700 text-muted-500 dark:text-muted-200 h-7 w-auto items-center justify-center rounded-full text-xs p-1">mod_expires</span>,
 													<span class="bg-muted-200 dark:bg-muted-700 text-muted-500 dark:text-muted-200 h-7 w-auto items-center justify-center rounded-full text-xs p-1">mod_deflate</span>
+													<span class="bg-muted-200 dark:bg-muted-700 text-muted-500 dark:text-muted-200 h-7 w-auto items-center justify-center rounded-full text-xs p-1">mod_filter</span>
 
 													<span class="check-result" style="display:none"></span>
 													<div id="apache-modules-missing" style="display:none;color:#e18f00;margin-top:15px">
