--- a/install/index.html
+++ b/install/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/main.css" />
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/Kraken/3.8.2/js/html5.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+		<script src="./../application/vendor/node_modules/jquery/dist/jquery.min.js"></script>
         <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
 
 		<script src="js/lang.js"></script>
