--- a/install/index.html
+++ b/install/index.html
@@ -145,6 +145,17 @@
 													    		 </div>
 													    	  </div>
 													       </div>
+														   <div class="relative my-4 flex items-center justify-center px-3">
+															<div class="relative">
+															   <input type="radio" id="language_selection_cn" class="peer absolute start-0 top-0 z-20 h-full w-full cursor-pointer opacity-0" onclick="setLanguage('cn')">
+															   <div class="border-muted-200 peer-checked:border-primary-500 dark:border-muted-600 flex h-14 w-14 items-center justify-center rounded-full border-2 shadow-lg transition-all duration-300"><img class="h-10 w-10 rounded-full" src="./../application/images/flags2/cn.svg" alt="flag icon"></div>
+															   <div class="bg-primary-500 dark:border-muted-800 absolute -end-1 -top-1 hidden h-7 w-7 items-center justify-center rounded-full border-4 border-white text-white peer-checked:flex">
+																  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" class="icon h-3 w-3" width="1em" height="1em" viewBox="0 0 24 24">
+																	 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 6L9 17l-5-5"></path>
+																  </svg>
+															   </div>
+															</div>
+														 </div>
 													    </div>
 													</div>
 								        		</div>
