Add wotlk classic expansion in installer

--- a/install/index.html
+++ b/install/index.html
@@ -327,7 +327,7 @@
 														<div class="group/nui-input relative">
 															<select id="max_expansion" data-tip="Max expansion" required class="nui-focus border-muted-300 text-muted-600 placeholder:text-muted-300 focus:border-muted-300 focus:shadow-muted-300/50 dark:border-muted-700 dark:bg-muted-900/75 dark:text-muted-200 dark:placeholder:text-muted-500 dark:focus:border-muted-700 dark:focus:shadow-muted-800/50 peer/input relative w-full border bg-white pe-12 ps-4 font-sans text-sm leading-5 focus:shadow-lg disabled:cursor-not-allowed disabled:opacity-75 rounded-xl">
 																<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="10">The War Within</option>
-																<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="9">Dragonflight</option>
+																<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="9">Dragonflight/Wotlk Classic</option>
 																<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="8">Shadowlands</option>
 																<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="7">Battle for Azeroth</option>
 																<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="6">Legion</option>
@@ -634,7 +634,7 @@
 																	<div class="group/nui-input relative">
 																		<select id="realm_expansion" data-tip="{{realm_expansion_detail}}" required class="nui-focus border-muted-300 text-muted-600 placeholder:text-muted-300 focus:border-muted-300 focus:shadow-muted-300/50 dark:border-muted-700 dark:bg-muted-900/75 dark:text-muted-200 dark:placeholder:text-muted-500 dark:focus:border-muted-700 dark:focus:shadow-muted-800/50 peer/input relative w-full border bg-white pe-12 ps-4 font-sans text-sm leading-5 focus:shadow-lg disabled:cursor-not-allowed disabled:opacity-75 rounded-xl">
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="10">The War Within</option>
-																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="9">Dragonflight</option>
+																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="9">Dragonflight/Wotlk Classic</option>
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="8">Shadowlands</option>
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="7">Battle for Azeroth</option>
 																			<option class="relative flex cursor-pointer select-none items-center px-3 py-2 rounded" value="6">Legion</option>
